# DataMind

./: .gitignore  README.md  testing.ipynb
Backend/: main.py  pyproject.toml  requirements.txt  tmp_debug.csv
Backend/Testing dataset/: messy.csv  messy_dataset.csv  messy_with_outliers.csv
Backend/core/: data_cleaner.py  data_loader.py  outlier_detector.py  pipeline_manager.py  quality_analyzer.py  settings.py
Backend/ml/: automl_engine.py  imputers.py  intent_detector.py  query_engine.py  visualization_engine.py
Backend/routes/: chat_router.py  dataset_router.py  graph_router.py  upload_router.py
Backend/schemas/: api.py
Backend/services/: answer_synthesizer.py  chat_service.py  dataset_report.py  execution_engine.py  gemini_helper.py  insight_generator.py  insight_summarizer.py  json_utils.py  llm_planner.py  llm_service.py  memory_manager.py  model_registry.py  session_store.py  visualization_service.py
Frontend/: index.html  package-lock.json  package.json
Frontend/src/: App.jsx  index.css
Frontend/src/components/: ChartRenderer.jsx  ChatInput.jsx  ChatMessage.jsx  ChatWindow.jsx  DataTable.jsx  DatasetPage.jsx  FileUpload.jsx  GraphPage.jsx  MessageBubble.jsx  PredictionCard.jsx  Sidebar.jsx
Frontend/src/pages/: ChatPage.jsx  DatasetPage.jsx  UploadPage.jsx
Frontend/src/services/: app.js
